test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-modify-source/changed-secret.yaml
apiVersion: v1
data:
  foo: aGVyZWlzY2hhbmdlZGRhdGE=
kind: Secret
metadata:
  name: regcred
  namespace: default
type: Opaque
