test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-modify-source/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-nosync-clone-modify-source
