test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-modify-source/02-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - assert:
      file: cloned.yaml
